other-mpol/add-labels/.kyverno-test/patchedResource-exception.yaml
apiVersion: v1
kind: Pod
metadata:
  name: label-exception-pod
  namespace: team-a
spec:
  containers:
  - name: app
    image: nginx:latest
