other-mpol/add-labels/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-labels
policies:
- ../add-labels.yaml
resources:
- resource.yaml
- resource-exception.yaml
exceptions:
- exceptions.yaml
results:
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: add-labels
  resources:
  - default/myapp-pod
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: patchedResource-exception.yaml
  policy: add-labels
  resources:
  - label-exception-pod
  result: pass
  isMutatingPolicy: true
- kind: Service
  patchedResources: patchedResource1.yaml
  policy: add-labels
  resources:
  - default/my-service
  result: pass
  isMutatingPolicy: true
